--- a/templates/main/doctors.html
+++ b/templates/main/doctors.html
@@ -25,200 +25,34 @@
 <section class="content">
 
     <div class="row">
-
-      <div class="col-12 col-lg-4">
-        <div class="box ribbon-box">
-          <div class="ribbon-two ribbon-two-primary"><span>Full Time</span></div>
-          <div class="box-header no-border p-0">				
-            <a href="#">
-              <img class="img-fluid" src="{% static 'images/avatar/375x200/1.jpg' %}" alt="">
-            </a>
-          </div>
-          <div class="box-body">
-                <div class="user-contact list-inline text-center">
-                    <a href="#" class="btn btn-circle mb-5 btn-facebook"><i class="fa fa-facebook"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-instagram"><i class="fa fa-instagram"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-twitter"><i class="fa fa-twitter"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-warning"><i class="fa fa-envelope"></i></a>				
+      {% for doctor in doctors %}
+        <div class="col-12 col-lg-4">
+          <div class="box ribbon-box">
+            <div class="ribbon-two ribbon-two-primary"><span>Full Time</span></div>
+            <div class="box-header no-border p-0">				
+              <a href="#">
+                {% if doctor.profile_pic %}
+                <img class="img-fluid" src="{{doctor.profile_pic.url}}" alt="">
+                {% else %}
+                <img class="img-fluid" src="{% static 'images/user.png' %}" alt="">
+                {% endif %}
+              </a>
+            </div>
+            <div class="box-body">
+                  <div class="user-contact list-inline text-center">
+                      <a href="#" class="btn btn-circle mb-5 btn-facebook"><i class="fa fa-facebook"></i></a>
+                      <a href="#" class="btn btn-circle mb-5 btn-instagram"><i class="fa fa-instagram"></i></a>
+                      <a href="#" class="btn btn-circle mb-5 btn-twitter"><i class="fa fa-twitter"></i></a>
+                      <a href="#" class="btn btn-circle mb-5 btn-warning"><i class="fa fa-envelope"></i></a>				
+                  </div>
+                <div class="text-center">
+                  <h3 class="my-10"><a href="#">{{doctor.first_name}} - {{doctor.last_name}}</a></h3>
+                  <h6 class="user-info mt-0 mb-10 text-fade">{{doctor.health_facility}}</h6>
                 </div>
-              <div class="text-center">
-                <h3 class="my-10"><a href="#">Dr. Tristan</a></h3>
-                <h6 class="user-info mt-0 mb-10 text-fade">Gynecologist</h6>
-              </div>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-12 col-lg-4">
-        <div class="box ribbon-box">
-          <div class="ribbon-two ribbon-two-danger"><span>Part Time</span></div>
-          <div class="box-header no-border p-0">				
-            <a href="#">
-              <img class="img-fluid" src="{% static 'images/avatar/375x200/2.jpg' %}" alt="">
-            </a>
-          </div>
-          <div class="box-body">
-              <div class="text-center">
-                <div class="user-contact list-inline text-center">
-                    <a href="#" class="btn btn-circle mb-5 btn-facebook"><i class="fa fa-facebook"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-instagram"><i class="fa fa-instagram"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-twitter"><i class="fa fa-twitter"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-warning"><i class="fa fa-envelope"></i></a>				
-                </div>
-                <h3 class="my-10"><a href="#">Dr. Sophia</a></h3>
-                <h6 class="user-info mt-0 mb-10 text-fade">Dentist</h6>
-              </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-lg-4">
-        <div class="box ribbon-box">
-          <div class="ribbon-two ribbon-two-success"><span>Part Time</span></div>
-          <div class="box-header no-border p-0">				
-            <a href="#">
-              <img class="img-fluid" src="{% static 'images/avatar/375x200/3.jpg' %}" alt="">
-            </a>
-          </div>
-          <div class="box-body">
-              <div class="text-center">
-                <div class="user-contact list-inline text-center">
-                    <a href="#" class="btn btn-circle mb-5 btn-facebook"><i class="fa fa-facebook"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-instagram"><i class="fa fa-instagram"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-twitter"><i class="fa fa-twitter"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-warning"><i class="fa fa-envelope"></i></a>				
-                </div>
-                <h3 class="my-10"><a href="#">Dr. Jacob</a></h3>
-                <h6 class="user-info mt-0 mb-10 text-fade">Physical Therapy</h6>
-              </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-lg-4">
-        <div class="box">
-          <div class="box-header no-border p-0">				
-            <a href="#">
-              <img class="img-fluid" src="{% static 'images/avatar/375x200/4.jpg' %}" alt="">
-            </a>
-          </div>
-          <div class="box-body">
-              <div class="text-center">
-                <div class="user-contact list-inline text-center">
-                    <a href="#" class="btn btn-circle mb-5 btn-facebook"><i class="fa fa-facebook"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-instagram"><i class="fa fa-instagram"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-twitter"><i class="fa fa-twitter"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-warning"><i class="fa fa-envelope"></i></a>				
-                </div>
-                <h3 class="my-10"><a href="#">Dr. Isabella</a></h3>
-                <h6 class="user-info mt-0 mb-10 text-fade">Nursingc</h6>
-              </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-lg-4">
-        <div class="box ribbon-box">
-          <div class="ribbon-two ribbon-two-info"><span>Full Time</span></div>
-          <div class="box-header no-border p-0">				
-            <a href="#">
-              <img class="img-fluid" src="{% static 'images/avatar/375x200/5.jpg' %}" alt="">
-            </a>
-          </div>
-          <div class="box-body">
-              <div class="text-center">
-                <div class="user-contact list-inline text-center">
-                    <a href="#" class="btn btn-circle mb-5 btn-facebook"><i class="fa fa-facebook"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-instagram"><i class="fa fa-instagram"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-twitter"><i class="fa fa-twitter"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-warning"><i class="fa fa-envelope"></i></a>				
-                </div>
-                <h3 class="my-10"><a href="#">Dr. Emma</a></h3>
-                <h6 class="user-info mt-0 mb-10 text-fade">Urologist</h6>
-              </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-lg-4">
-        <div class="box">
-          <div class="box-header no-border p-0">				
-            <a href="#">
-              <img class="img-fluid" src="{% static 'images/avatar/375x200/6.jpg' %}" alt="">
-            </a>
-          </div>
-          <div class="box-body">
-              <div class="text-center">
-                <div class="user-contact list-inline text-center">
-                    <a href="#" class="btn btn-circle mb-5 btn-facebook"><i class="fa fa-facebook"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-instagram"><i class="fa fa-instagram"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-twitter"><i class="fa fa-twitter"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-warning"><i class="fa fa-envelope"></i></a>				
-                </div>
-                <h3 class="my-10"><a href="#">Dr. William</a></h3>
-                <h6 class="user-info mt-0 mb-10 text-fade">Rheumatologist</h6>
-              </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-lg-4">
-        <div class="box">
-          <div class="box-header no-border p-0">				
-            <a href="#">
-              <img class="img-fluid" src="{% static 'images/avatar/375x200/7.jpg' %}" alt="">
-            </a>
-          </div>
-          <div class="box-body">
-              <div class="text-center">
-                <div class="user-contact list-inline text-center">
-                    <a href="#" class="btn btn-circle mb-5 btn-facebook"><i class="fa fa-facebook"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-instagram"><i class="fa fa-instagram"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-twitter"><i class="fa fa-twitter"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-warning"><i class="fa fa-envelope"></i></a>				
-                </div>
-                <h3 class="my-10"><a href="#">Dr. Tristan</a></h3>
-                <h6 class="user-info mt-0 mb-10 text-fade">Orthopeadic</h6>
-              </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-lg-4">
-        <div class="box">
-          <div class="box-header no-border p-0">				
-            <a href="#">
-              <img class="img-fluid" src="{% static 'images/avatar/375x200/8.jpg' %}" alt="">
-            </a>
-          </div>
-          <div class="box-body">
-              <div class="text-center">
-                <div class="user-contact list-inline text-center">
-                    <a href="#" class="btn btn-circle mb-5 btn-facebook"><i class="fa fa-facebook"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-instagram"><i class="fa fa-instagram"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-twitter"><i class="fa fa-twitter"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-warning"><i class="fa fa-envelope"></i></a>				
-                </div>
-                <h3 class="my-10"><a href="#">Dr. Michael</a></h3>
-                <h6 class="user-info mt-0 mb-10 text-fade">ENT Specialist</h6>
-              </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-lg-4">
-        <div class="box">
-          <div class="box-header no-border p-0">				
-            <a href="#">
-              <img class="img-fluid" src="{% static 'images/avatar/375x200/2.jpg' %}" alt="">
-            </a>
-          </div>
-          <div class="box-body">
-              <div class="text-center">
-                <div class="user-contact list-inline text-center">
-                    <a href="#" class="btn btn-circle mb-5 btn-facebook"><i class="fa fa-facebook"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-instagram"><i class="fa fa-instagram"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-twitter"><i class="fa fa-twitter"></i></a>
-                    <a href="#" class="btn btn-circle mb-5 btn-warning"><i class="fa fa-envelope"></i></a>				
-                </div>
-                <h3 class="my-10"><a href="#">Dr. Sophia</a></h3>
-                <h6 class="user-info mt-0 mb-10 text-fade">Vascular specialist</h6>
-              </div>
-          </div>
-        </div>
-      </div>
+      {% endfor %}
     </div>
 
 </section>
