--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -17,7 +17,7 @@
 				<div class="col-xl-6 col-12">						
 					<div class="box">
 						<div class="box-header">
-							<h4 class="box-title">Next Patient</h4>
+							<h4 class="box-title">Recent Transfer</h4>
 						</div>
 						<div class="box-body">	
 							<div class="news-slider owl-carousel owl-sl">	
@@ -121,7 +121,7 @@
 				<div class="col-xl-6 col-12">						
 					<div class="box">
 						<div class="box-header">
-							<h4 class="box-title">Laboratory tests</h4>
+							<h4 class="box-title">Recent Patient</h4>
 						</div>
 						<div class="box-body">	
 							<div class="news-slider owl-carousel owl-sl">	
@@ -222,156 +222,21 @@
 				<div class="col-xl-6 col-12">						
 					<div class="box">
 						<div class="box-header">
-							<h4 class="box-title">Overal appointment</h4>
+							<h4 class="box-title">Overal Today appointment</h4>
 						</div>
 						<div class="box-body">										
 							<div id="appointment_overview"></div>							
 						</div>
 					</div>
 				</div>
-				<div class="col-xl-6 col-12">						
-					<div class="box">
-						<div class="box-header">
-							<h4 class="box-title">Patients Pace</h4>
-						</div>
-						<div class="box-body">										
-							<div id="patients_pace"></div>							
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-6 col-12">						
-					<div class="box">
-						<div class="box-header no-border">
-							<h4 class="box-title">Recent questions</h4>
-						</div>
-						<div class="box-body p-0">
-							<div class="px-20 py-10 bg-gray-100">
-								<div class="d-flex align-items-center justify-content-end">
-									<button type="button" class="waves-effect waves-light btn btn-sm btn-success-light">All</button>
-									<button type="button" class="waves-effect waves-light mx-10 btn btn-sm btn-success">Unread</button>
-									<button type="button" class="waves-effect waves-light btn btn-sm btn-success-light">New</button>
-								</div>
-							</div>
-						</div>
-						<div class="box-body">
-							<div class="inner-user-div3">
-								<div class="d-flex justify-content-between align-items-center pb-20 mb-10 bb-dashed border-bottom">
-									<div class="pe-20">
-										<p class="fs-12 text-fade">14 Jun 2021 <span class="mx-10">/</span> 01:05PM</p>																	<h4>Addiction blood bank bone marrow contagious disinfectants?</h4>												
-										<div class="d-flex align-items-center">
-											<button type="button" class="waves-effect waves-light btn me-10 btn-xs btn-success-light">Read more</button>
-											<button type="button" class="waves-effect waves-light btn btn-xs btn-success-light">Reply</button>
-										</div>
-									</div>
-									<div>
-										<a href="#" class="waves-effect waves-circle btn btn-circle btn-success-light btn-lg"><i class="fa fa-comments"></i></a>
-									</div>
-								</div>
-								<div class="d-flex justify-content-between align-items-center pb-20 bb-dashed border-bottom">
-									<div class="pe-20">
-										<p class="fs-12 text-fade">17 Jun 2021 <span class="mx-10">/</span> 02:05PM</p>																	<h4>Triggered asthma anesthesia blood type bone marrow cartilage?</h4>												
-										<div class="d-flex align-items-center">
-											<button type="button" class="waves-effect waves-light btn me-10 btn-xs btn-success-light">Read more</button>
-											<button type="button" class="waves-effect waves-light btn btn-xs btn-success-light">Reply</button>
-										</div>
-									</div>
-									<div>
-										<a href="#" class="waves-effect waves-circle btn btn-circle btn-success-light btn-lg"><i class="fa fa-comments"></i></a>
-									</div>
-								</div>
-								<div class="d-flex justify-content-between align-items-center pb-20 mb-10 bb-dashed border-bottom">
-									<div class="pe-20">
-										<p class="fs-12 text-fade">14 Jun 2021 <span class="mx-10">/</span> 01:05PM</p>																	<h4>Addiction blood bank bone marrow contagious disinfectants?</h4>												
-										<div class="d-flex align-items-center">
-											<button type="button" class="waves-effect waves-light btn me-10 btn-xs btn-success-light">Read more</button>
-											<button type="button" class="waves-effect waves-light btn btn-xs btn-success-light">Reply</button>
-										</div>
-									</div>
-									<div>
-										<a href="#" class="waves-effect waves-circle btn btn-circle btn-success-light btn-lg"><i class="fa fa-comments"></i></a>
-									</div>
-								</div>
-								<div class="d-flex justify-content-between align-items-center pb-20 bb-dashed border-bottom">
-									<div class="pe-20">
-										<p class="fs-12 text-fade">17 Jun 2021 <span class="mx-10">/</span> 02:05PM</p>																	<h4>Triggered asthma anesthesia blood type bone marrow cartilage?</h4>												
-										<div class="d-flex align-items-center">
-											<button type="button" class="waves-effect waves-light btn me-10 btn-xs btn-success-light">Read more</button>
-											<button type="button" class="waves-effect waves-light btn btn-xs btn-success-light">Reply</button>
-										</div>
-									</div>
-									<div>
-										<a href="#" class="waves-effect waves-circle btn btn-circle btn-success-light btn-lg"><i class="fa fa-comments"></i></a>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-6 col-12">						
+				<div class="col-xl-6 col-12">	
 					<div class="box">		
-						<div class="box-header">
-							<h4 class="box-title">Confirmed Diagnoses</h4>
+						<div class="box-header no-border">
+							<h4 class="box-title">Appointments Overview</h4>
 						</div>
-						<div class="box-body">
-							<div class="inner-user-div2">
-								<div class="mb-30">
-									 <div class="d-flex align-items-center justify-content-between mb-5"><h5>648 of 751</h5><h5>Cold</h5></div>
-									 <div class="progress  progress-xs">
-										<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-										</div>
-									 </div>
-								</div>
-								<div class="mb-30">
-									 <div class="d-flex align-items-center justify-content-between mb-5"><h5>215 of 651</h5><h5>Fracture</h5></div>
-									 <div class="progress  progress-xs">
-										<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="24" aria-valuemin="0" aria-valuemax="100" style="width: 24%">
-										</div>
-									 </div>
-								</div>
-								<div class="mb-30">
-									 <div class="d-flex align-items-center justify-content-between mb-5"><h5>84 of 120</h5><h5>Concussion</h5></div>
-									 <div class="progress  progress-xs">
-										<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="91" aria-valuemin="0" aria-valuemax="100" style="width: 91%">
-										</div>
-									 </div>
-								</div>
-								<div class="mb-30">
-									 <div class="d-flex align-items-center justify-content-between mb-5"><h5>846 of 804</h5><h5>Hepatitis</h5></div>
-									 <div class="progress  progress-xs">
-										<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
-										</div>
-									 </div>
-								</div>
-								<div class="mb-30">
-									 <div class="d-flex align-items-center justify-content-between mb-5"><h5>458 of 901</h5><h5>Dermatitis</h5></div>
-									 <div class="progress  progress-xs">
-										<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100" style="width: 72%">
-										</div>
-									 </div>
-								</div>
-								<div class="mb-30">
-									 <div class="d-flex align-items-center justify-content-between mb-5"><h5>548 of 720</h5><h5>Heart</h5></div>
-									 <div class="progress  progress-xs">
-										<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="91" aria-valuemin="0" aria-valuemax="100" style="width: 91%">
-										</div>
-									 </div>
-								</div>
-								<div class="mb-30">
-									 <div class="d-flex align-items-center justify-content-between mb-5"><h5>154 of 480</h5><h5>Covid</h5></div>
-									 <div class="progress  progress-xs">
-										<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
-										</div>
-									 </div>
-								</div>
-								<div class="mb-30">
-									 <div class="d-flex align-items-center justify-content-between mb-5"><h5>98 of 650</h5><h5>Hematoma</h5></div>
-									 <div class="progress  progress-xs">
-										<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100" style="width: 72%">
-										</div>
-									 </div>
-								</div>
-							</div>
-						</div>
+						<div class="box-body">	
+							<div id="chart432"></div>
+						</div>																		
 					</div>
 				</div>
 			</div>					
@@ -574,14 +439,6 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="box">		
-				<div class="box-header no-border">
-					<h4 class="box-title">Appointments Overview</h4>
-				</div>
-				<div class="box-body">	
-					<div id="chart432"></div>
-				</div>																		
 			</div>
 		</div>				
 	</div>			
