--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -18,8 +18,7 @@
 	<!-- Style-->  
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
 	<link rel="stylesheet" href="{% static 'css/skin_color.css' %}">
-	{% comment %} <link rel="stylesheet" href="{% static 'js/htmx.min.js' %}"> {% endcomment %}
-	<script src="https://unpkg.com/htmx.org@2.0.2"></script>
+	<script src="{% static 'js/htmx.min.js' %}"></script>
      
   </head>
 
@@ -31,33 +30,33 @@
   {% include "includes/header.html" %}
   
   {% include "includes/sidebar.html" %}
-
-  <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
-	{% if messages %}
-		{% for message in messages %}
-		<div class="myadmin-alert myadmin-alert-img myadmin-alert-click alert-{% if message.tags == "error" %}danger{%else%}{{message.tags}}{% endif %} myadmin-alert-top alerttop2"> 
-			<img src="../images/avatar5.png" class="img" alt="img">
-				<a href="#" class="closed">&times;</a>
-				<h4>{{message.tags}} Message!</h4> 
-				<b>{{message.tags}}</b> {{message|safe}} 
-				<a href="#" class="closed">&times;</a> 
-		</div>
-		{% endfor %}
-	{% endif %}
-	  <div class="container-full">
-		{% block main-content %}{% endblock main-content %}
-	  </div>
-  </div>
-  <!-- /.content-wrapper -->
-  {% include "includes/footer.html" %}
 
-  <!-- Control Sidebar -->
- {% include "includes/aside.html" %}
-  <!-- /.control-sidebar -->
-  
-  <!-- Add the sidebar's background. This div must be placed immediately after the control sidebar -->
-  <div class="control-sidebar-bg"></div>
+		<!-- Content Wrapper. Contains page content -->
+			{% if messages %}
+				{% for message in messages %}
+				<div class="myadmin-alert myadmin-alert-img myadmin-alert-click alert-{% if message.tags == "error" %}danger{%else%}{{message.tags}}{% endif %} myadmin-alert-top alerttop2" style="display: block;"> 
+					{% comment %} <img src="../images/avatar5.png" class="img" alt="img"> {% endcomment %}
+						<a href="#" class="closed">&times;</a>
+						<h4>{{message.tags}} Message!</h4> 
+						<b>{{message.tags}}</b> {{message|safe}} 
+						<a href="#" class="closed">&times;</a> 
+				</div>
+				{% endfor %}
+			{% endif %}
+			<div class="container-full">
+				
+				{% block main-content %}{% endblock main-content %}
+			</div>
+  <!-- /.content-wrapper -->
+  	{% include "includes/footer.html" %}
+
+	<!-- Control Sidebar -->
+	{% include "includes/aside.html" %}
+	<!-- /.control-sidebar -->
+	
+	<!-- Add the sidebar's background. This div must be placed immediately after the control sidebar -->
+	<div class="control-sidebar-bg"></div>
   
 </div>
 <!-- ./wrapper -->
@@ -81,8 +80,10 @@
 	{% endblock scripts %}
 	
 	
-	<!-- Rhythm Admin App -->
+	<!--  Admin App -->
 	<script src="{% static 'js/template.js' %}"></script>
+	<script src="js/pages/toastr.js"></script>
+    <script src="js/pages/notification.js"></script>
 	{% block dashboard %}
 	<script src="{% static 'js/pages/dashboard3.js' %}"></script>
 	{% endblock dashboard %}
