--- a/templates/main/health-facilities.html
+++ b/templates/main/health-facilities.html
@@ -42,234 +42,27 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr class="hover-primary">
-                                    <td>#p245879</td>
-                                    <td>14 April 2021, 10:30 AM</td>
-                                    <td>Aaliyah clark</td>
-                                    <td>Dr. Johen Doe</td>
-                                    <td>Cold & Flu</td>
-                                    <td><span class="badge badge-danger-light">New Patient</span></td>
-                                    <td>FF-103</td>
-                                    <td>												
-                                        <div class="btn-group">
-                                          <a class="hover-primary dropdown-toggle no-caret" data-bs-toggle="dropdown"><i class="glyphicon glyphicon-chevron-down"></i></a>
-                                          <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="{% url 'patient-detail' 1 %}"><i class="glyphicon glyphicon-eye-open"></i>View Details</a>
-                                            <a class="dropdown-item" href="#"><i class="glyphicon glyphicon-pencil"></i>Edit</a>
-                                            <a class="dropdown-item" href="#"><i class="glyphicon glyphicon-remove-sign"></i>Delete</a>
+                                {% for health_facility in health_facilities %}
+                                  <tr class="hover-primary">
+                                      <td>#{{health_facility.id}}</td>
+                                      <td>{{health_facility.name}}</td>
+                                      <td>{{health_facility.phone_number}}</td>
+                                      <td>{{health_facility.district}}</td>
+                                      <td>{{health_facility.sector}}</td>
+                                      <td>{{health_facility.cell}}</td>
+                                      <td><span class="badge badge-danger-light">{{health_facility.status}}</span></td>
+                                      <td>												
+                                          <div class="btn-group">
+                                            <a class="hover-primary dropdown-toggle no-caret" data-bs-toggle="dropdown"><i class="glyphicon glyphicon-chevron-down"></i></a>
+                                            <div class="dropdown-menu">
+                                              <a class="dropdown-item" href="{% url 'patient-detail' 1 %}"><i class="glyphicon glyphicon-eye-open"></i>View Details</a>
+                                              <a class="dropdown-item" href="#"><i class="glyphicon glyphicon-pencil"></i>Edit</a>
+                                              <a class="dropdown-item" href="#"><i class="glyphicon glyphicon-remove-sign"></i>Delete</a>
+                                            </div>
                                           </div>
-                                        </div>
-                                    </td>
-                                </tr>										
-                                <tr class="hover-primary">
-                                    <td>#p245880</td>
-                                    <td>18 April 2021, 11:30 AM</td>
-                                    <td>Mical clark</td>
-                                    <td>Dr. Aiden Doe</td>
-                                    <td>Diabetes</td>
-                                    <td><span class="badge badge-success-light">Recovered</span></td>
-                                    <td>FF-105</td>
-                                    <td>												
-                                        <div class="btn-group">
-                                          <a class="hover-primary dropdown-toggle no-caret" data-bs-toggle="dropdown"><i class="fa fa-ellipsis-h"></i></a>
-                                          <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">View Details</a>
-                                            <a class="dropdown-item" href="#">Edit</a>
-                                            <a class="dropdown-item" href="#">Delete</a>
-                                          </div>
-                                        </div>
-                                    </td>
-                                </tr>										
-                                <tr class="hover-primary">
-                                    <td>#p245881</td>
-                                    <td>22 May 2021, 15:30 PM</td>
-                                    <td>Stela clark</td>
-                                    <td>Dr. Lalvani doe</td>
-                                    <td>Hearing Loss</td>
-                                    <td><span class="badge badge-danger-light">New Patient</span></td>
-                                    <td>FF-112</td>
-                                    <td>												
-                                        <div class="btn-group">
-                                          <a class="hover-primary dropdown-toggle no-caret" data-bs-toggle="dropdown"><i class="fa fa-ellipsis-h"></i></a>
-                                          <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">View Details</a>
-                                            <a class="dropdown-item" href="#">Edit</a>
-                                            <a class="dropdown-item" href="#">Delete</a>
-                                          </div>
-                                        </div>
-                                    </td>
-                                </tr>										
-                                <tr class="hover-primary">
-                                    <td>#p245882</td>
-                                    <td>26 April 2021, 10:30 AM</td>
-                                    <td>Boone Doe</td>
-                                    <td>Dr. Don Paton</td>
-                                    <td>Allergies & Asthma</td>
-                                    <td><span class="badge badge-danger-light">New Patient</span></td>
-                                    <td>FF-124</td>
-                                    <td>												
-                                        <div class="btn-group">
-                                          <a class="hover-primary dropdown-toggle no-caret" data-bs-toggle="dropdown"><i class="fa fa-ellipsis-h"></i></a>
-                                          <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">View Details</a>
-                                            <a class="dropdown-item" href="#">Edit</a>
-                                            <a class="dropdown-item" href="#">Delete</a>
-                                          </div>
-                                        </div>
-                                    </td>
-                                </tr>										
-                                <tr class="hover-primary">
-                                    <td>#p245883</td>
-                                    <td>30 April 2021, 10:30 AM</td>
-                                    <td>Carlie Paton</td>
-                                    <td>Dr. Mical Doe</td>
-                                    <td>Sleep Problem</td>
-                                    <td><span class="badge badge-warning-light">In Treatment</span></td>
-                                    <td>FF-117</td>
-                                    <td>												
-                                        <div class="btn-group">
-                                          <a class="hover-primary dropdown-toggle no-caret" data-bs-toggle="dropdown"><i class="fa fa-ellipsis-h"></i></a>
-                                          <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">View Details</a>
-                                            <a class="dropdown-item" href="#">Edit</a>
-                                            <a class="dropdown-item" href="#">Delete</a>
-                                          </div>
-                                        </div>
-                                    </td>
-                                </tr>										
-                                <tr class="hover-primary">
-                                    <td>#p245884</td>
-                                    <td>1 May 2021, 10:30 AM</td>
-                                    <td>Delilah</td>
-                                    <td>Dr. Johen Doe</td>
-                                    <td>Dental Care</td>
-                                    <td><span class="badge badge-success-light">Recovered</span></td>
-                                    <td>FF-141</td>
-                                    <td>												
-                                        <div class="btn-group">
-                                          <a class="hover-primary dropdown-toggle no-caret" data-bs-toggle="dropdown"><i class="fa fa-ellipsis-h"></i></a>
-                                          <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">View Details</a>
-                                            <a class="dropdown-item" href="#">Edit</a>
-                                            <a class="dropdown-item" href="#">Delete</a>
-                                          </div>
-                                        </div>
-                                    </td>
-                                </tr>										
-                                <tr class="hover-primary">
-                                    <td>#p245885</td>
-                                    <td>2 May 2021, 10:30 AM</td>
-                                    <td>Hannah Doe</td>
-                                    <td>Dr. Jennifer Ruby</td>
-                                    <td>Diabetes</td>
-                                    <td><span class="badge badge-warning-light">In Treatment</span></td>
-                                    <td>SF-203</td>
-                                    <td>												
-                                        <div class="btn-group">
-                                          <a class="hover-primary dropdown-toggle no-caret" data-bs-toggle="dropdown"><i class="fa fa-ellipsis-h"></i></a>
-                                          <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">View Details</a>
-                                            <a class="dropdown-item" href="#">Edit</a>
-                                            <a class="dropdown-item" href="#">Delete</a>
-                                          </div>
-                                        </div>
-                                    </td>
-                                </tr>										
-                                <tr class="hover-primary">
-                                    <td>#p245886</td>
-                                    <td>3 May 2021, 10:30 AM</td>
-                                    <td>Emerson Clark</td>
-                                    <td>Dr. Alex Siauw</td>
-                                    <td>Covid-19 Suspect</td>
-                                    <td><span class="badge badge-warning-light">In Treatment</span></td>
-                                    <td>SF-201</td>
-                                    <td>												
-                                        <div class="btn-group">
-                                          <a class="hover-primary dropdown-toggle no-caret" data-bs-toggle="dropdown"><i class="fa fa-ellipsis-h"></i></a>
-                                          <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">View Details</a>
-                                            <a class="dropdown-item" href="#">Edit</a>
-                                            <a class="dropdown-item" href="#">Delete</a>
-                                          </div>
-                                        </div>
-                                    </td>
-                                </tr>										
-                                <tr class="hover-primary">
-                                    <td>#p245887</td>
-                                    <td>4 May 2021, 10:30 AM</td>
-                                    <td>Crystal Doe</td>
-                                    <td>Dr. Samuel Jr.</td>
-                                    <td>Cold & Flu</td>
-                                    <td><span class="badge badge-success-light">Recovered</span></td>
-                                    <td>SF-205</td>
-                                    <td>												
-                                        <div class="btn-group">
-                                          <a class="hover-primary dropdown-toggle no-caret" data-bs-toggle="dropdown"><i class="fa fa-ellipsis-h"></i></a>
-                                          <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">View Details</a>
-                                            <a class="dropdown-item" href="#">Edit</a>
-                                            <a class="dropdown-item" href="#">Delete</a>
-                                          </div>
-                                        </div>
-                                    </td>
-                                </tr>										
-                                <tr class="hover-primary">
-                                    <td>#p245888</td>
-                                    <td>5 May 2021, 10:30 AM</td>
-                                    <td>Jenny don</td>
-                                    <td>Dr. Widan Cheeh</td>
-                                    <td>Cold & Flu</td>
-                                    <td><span class="badge badge-warning-light">In Treatment</span></td>
-                                    <td>SF-210</td>
-                                    <td>												
-                                        <div class="btn-group">
-                                          <a class="hover-primary dropdown-toggle no-caret" data-bs-toggle="dropdown"><i class="fa fa-ellipsis-h"></i></a>
-                                          <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">View Details</a>
-                                            <a class="dropdown-item" href="#">Edit</a>
-                                            <a class="dropdown-item" href="#">Delete</a>
-                                          </div>
-                                        </div>
-                                    </td>
-                                </tr>										
-                                <tr class="hover-primary">
-                                    <td>#p245889</td>
-                                    <td>6 May 2021, 10:30 AM</td>
-                                    <td>Joanne Clark</td>
-                                    <td>Dr. Samantha</td>
-                                    <td>Dental Care</td>
-                                    <td><span class="badge badge-danger-light">New Patient</span></td>
-                                    <td>SF-215</td>
-                                    <td>												
-                                        <div class="btn-group">
-                                          <a class="hover-primary dropdown-toggle no-caret" data-bs-toggle="dropdown"><i class="fa fa-ellipsis-h"></i></a>
-                                          <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">View Details</a>
-                                            <a class="dropdown-item" href="#">Edit</a>
-                                            <a class="dropdown-item" href="#">Delete</a>
-                                          </div>
-                                        </div>
-                                    </td>
-                                </tr>										
-                                <tr class="hover-primary">
-                                    <td>#p245890</td>
-                                    <td>6 May 2021, 10:30 AM</td>
-                                    <td>Madeline doe</td>
-                                    <td>Dr. Widan Cheeh</td>
-                                    <td>Allergies & Asthma</td>
-                                    <td><span class="badge badge-warning-light">In Treatment</span></td>
-                                    <td>SF-216</td>
-                                    <td>												
-                                        <div class="btn-group">
-                                          <a class="hover-primary dropdown-toggle no-caret" data-bs-toggle="dropdown"><i class="fa fa-ellipsis-h"></i></a>
-                                          <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">View Details</a>
-                                            <a class="dropdown-item" href="#">Edit</a>
-                                            <a class="dropdown-item" href="#">Delete</a>
-                                          </div>
-                                        </div>
-                                    </td>
-                                </tr>
+                                      </td>
+                                  </tr>
+                                {% endfor %}										
                             </tbody>
                         </table>
                     </div>
