--- a/templates/main/health-facility.html
+++ b/templates/main/health-facility.html
@@ -33,6 +33,15 @@
                 <!-- /.box-header -->
                 <form class="form" method="post">
                   {% csrf_token %}
+                  {% if form.errors %}
+                      <div class="alert alert-danger">
+                          <ul>
+                              {% for field, errors in form.errors.items %}
+                                  <li>{{ field }}: {{ errors }}</li>
+                              {% endfor %}
+                          </ul>
+                      </div>
+                  {% endif %}
                     <div class="box-body">
                         <h4 class="box-title text-info mb-0"><i class="ti-user me-15"></i> Facility Info</h4>
                         <div class="form-group">
