added requirements txt file

--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -77,6 +77,8 @@
 	<script src="{% static 'assets/vendor_components/date-paginator/moment.min.js' %}"></script>
 	<script src="{% static 'assets/vendor_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js' %}"></script>
 	<script src="{% static 'assets/vendor_components/date-paginator/bootstrap-datepaginator.min.js' %}"></script>
+	<script src="{% static 'assets/vendor_components/chart.js-master/Chart.min.js'%}"></script>
+	
 	{% endblock scripts %}
 	
 	
@@ -86,6 +88,7 @@
     <script src="js/pages/notification.js"></script>
 	{% block dashboard %}
 	<script src="{% static 'js/pages/dashboard3.js' %}"></script>
+	<script src="{% static 'js/pages/widget-charts2.js' %}"></script>
 	{% endblock dashboard %}
 
 	
