--- a/templates/main/patient-detail.html
+++ b/templates/main/patient-detail.html
@@ -30,7 +30,7 @@
                 <a href="javascript:void(0);" class="btn btn-primary me-5 mb-md-0 mb-5"><i class="fa fa-edit"></i> Edit Profile</a>
                 <div class="d-flex">
                     <a href="javascript:void(0);" class="btn btn-outline btn-danger me-5"><i class="fa fa-times-circle-o"></i> Delete Patient</a>
-                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modal-right"><i class="glyphicon glyphicon-header" ></i> create Visit</button>
+                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modal-right"><i class="glyphicon glyphicon-header" ></i>Pregnancy Category</button>
                 </div>
             </div>
             <div class="box">
