--- a/templates/main/add-patient.html
+++ b/templates/main/add-patient.html
@@ -110,6 +110,10 @@
                           {{form.identity}}
                         </div>
                         <div class="form-group">
+                          <label class="form-label">Email</label>
+                          {{form.email}}
+                        </div>
+                        <div class="form-group">
                           <label class="form-label">Profile Picture</label>
                           {{form.profile_pic}}
                         </div>
