--- a/templates/main/health-facility.html
+++ b/templates/main/health-facility.html
@@ -85,6 +85,10 @@
                         <h4 class="box-title text-info mb-0 mt-20"><i class="ti-save me-15"></i>Health Facility More Info</h4>
                         <hr class="my-15">
                         <div class="form-group">
+                          <label class="form-label">Email</label>
+                          {{form.email}}
+                        </div>
+                        <div class="form-group">
                           <label class="form-label">Health Facility Status</label>
                           {{form.status}}
                         </div>
